Add SEO-optimized README and package.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,60 @@
   "name": "@lxgic/suite",
   "version": "1.0.0",
   "private": true,
-  "description": "50 Enterprise NPX Tools for Claude/AI Integration",
+  "description": "50 Enterprise NPX Tools for AI, LLM, Prompt Engineering, and Claude/GPT Integration. Cost management, token optimization, prompt testing, hallucination detection, and more.",
+  "keywords": [
+    "ai",
+    "llm",
+    "gpt",
+    "gpt-4",
+    "openai",
+    "anthropic",
+    "claude",
+    "chatgpt",
+    "prompt-engineering",
+    "prompt",
+    "prompts",
+    "token",
+    "tokens",
+    "tokenizer",
+    "cli",
+    "npx",
+    "nodejs",
+    "typescript",
+    "developer-tools",
+    "devtools",
+    "automation",
+    "zero-config",
+    "agentic",
+    "ai-agent",
+    "ai-agents",
+    "langchain",
+    "rag",
+    "vector",
+    "embeddings",
+    "enterprise",
+    "cost-management",
+    "prompt-testing",
+    "prompt-optimization",
+    "hallucination-detection",
+    "ai-security",
+    "prompt-injection",
+    "pii-redaction",
+    "ai-compliance",
+    "ai-ops",
+    "mlops",
+    "llmops"
+  ],
+  "homepage": "https://github.com/lxgicstudios/Lxgic-Suite#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lxgicstudios/Lxgic-Suite.git"
+  },
+  "bugs": {
+    "url": "https://github.com/lxgicstudios/Lxgic-Suite/issues"
+  },
+  "author": "LXGIC Studios <hello@lxgicstudios.com> (https://lxgicstudios.com)",
+  "license": "MIT",
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
